--- a/category.html
+++ b/category.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: page
 title: Category
 permalink: /category/
 public: true
@@ -23,5 +23,5 @@ public: true
 {% endunless %}{% endfor %}
 
   </ul>
-  
+
 </div>
